--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,10 @@
 version: '3'
+networks:
+  lamp:
 services:
- linux:
-  image: ubuntu:latest
-  restart: always
+# linux:
+#  image: ubuntu:latest
+#  restart: always
  mysql:
   depends_on:
    - apache
@@ -13,12 +15,16 @@ services:
    MYSQL_DATABASE: cakephptest
    MYSQL_USER: root
    MYSQL_PASSWORD: root
+  networks:
+    - lamp
  apache:
-  depends_on:
-   - linux
-  image: myimg
+#  depends_on:
+#   - linux
+  build: .
   ports:
-   - "8000:80"
+   - "80:80"
   restart: always
   stdin_open: true
   tty: true
+  networks:
+    - lamp
