--- a/Tests 20 janvier/Dockerfile
+++ b/Tests 20 janvier/Dockerfile
@@ -17,3 +17,4 @@ COPY cassandrabackup.sh /bin/sh
 COPY cassandrabackuperror.sh /bin/sh
 COPY ipfsbackup.py /bin/sh
 USER jobberuser
+ENTRYPOINT #!/bin/sh
