--- a/Tests 20 janvier/Dockerfile
+++ b/Tests 20 janvier/Dockerfile
@@ -11,9 +11,9 @@ RUN cd /home/jobberuser && mkdir jobber && cd jobber && touch runlog.txt && touc
 RUN cd /backups/ && touch config.txt && touch repolist.txt && touch node-001.txt && touch cconf.txt && touch node-002.txt && touch keyrepolist.txt
 COPY jobber.txt /home/root/
 RUN cat /home/root/jobber.txt > /home/jobberuser/.jobber
-USER jobber
-COPY ipfsbackup.sh /bin/sh
-COPY ipfsbackuperror.sh /bin/sh
-COPY cassandrabackup.sh /bin/sh
-COPY cassandrabackuperror.sh /bin/sh
-COPY ipfsbackup.py /bin/sh
+USER jobberuser
+COPY ipfsbackup.sh .
+COPY ipfsbackuperror.sh .
+COPY cassandrabackup.sh .
+COPY cassandrabackuperror.sh .
+COPY ipfsbackup.py .
