--- a/Tests 20 janvier/docker-compose.yml
+++ b/Tests 20 janvier/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     networks:
       - ipfs
   backups:
+    volumes:
+      - "${KEYSTORE_PATH}:/data/ipfs/keystore:rw"
     build: backups/
     networks:
       - ipfs
