--- a/Tests 20 janvier/docker-compose.yml
+++ b/Tests 20 janvier/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - ipfs
   backups:
     volumes:
-      - "${KEYSTORE_PATH}:/data/"
+      - "${KEYSTORE_PATH}:/data"
     build: backups/
     networks:
       - ipfs
