--- a/Tests 20 janvier/docker-compose.yml
+++ b/Tests 20 janvier/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 networks:
   ipfs:
+    driver: bridge
 services:
   cassandra:
     image: cassandra:2.2.19
@@ -17,14 +18,17 @@ services:
       - "4001"
       - "5001"
       - "8080"
+    #volumes:
+      #- "${KEYSTORE_PATH}:/data/ipfs/keystore:rw"
     networks:
       - ipfs
+    container_name: "ipfs"
   backups:
-    volumes:
-      - "${KEYSTORE_PATH}:/var/lib:rw"
     build: backups/
     networks:
       - ipfs
     ports:
       - "4001:4001"
       - "5001:5001"
+      - "8080:8080"
+      - "8081:8081"
