--- a/Tests 20 janvier/docker-compose.yml
+++ b/Tests 20 janvier/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - ipfs
     container_name: "ipfs"
   backups:
-    #build: backups/
+    build: backups/
     networks:
       - ipfs
     ports:
